# alpha-pipeline

./: .env.example  .gitignore  BUG_FIXES.md  CLAUDE.md  DOD.md  Dockerfile.api  Dockerfile.worker  README.md  REPORT.md  TASK.md  claude-skills-guide.md  config.py  docker-compose.yml  main.py  pyproject.toml  skill-checklist.md  worker.py
.claude/agents/: dod-no-test.md  dod-test-first.md
.claude/skills/audit-bias/: SKILL.md
.claude/skills/audit-concurrency/: SKILL.md
.claude/skills/audit-data/: SKILL.md
.claude/skills/audit-metrics/: SKILL.md
.claude/skills/audit-production/: SKILL.md
data/: __init__.py  cache.py  loader.py  sample_data.csv  universe.py
metrics/: __init__.py  performance.py
mq/: __init__.py  redis_queue.py
reports/: audit-bias.md  audit-concurrency.md  audit-data.md  audit-metrics.md  audit-production.md
runner/: __init__.py  backtest.py  dispatcher.py  job_queue.py  progress.py
scripts/: generate_data.py  run_concurrent.sh
storage/: __init__.py  result_store.py
strategy/: __init__.py  base.py  macd.py  registry.py  rsi.py  sma_cross.py
tests/: conftest.py  test_api_compare_kwargs.py  test_api_kwargs_dispatch.py  test_backtest.py  test_backtest_await.py  test_cache_invalidation.py  test_concurrent_isolation.py  test_delisted_ticker_padding.py  test_loader_validation.py  test_metrics.py  test_progress_cleanup.py  test_result_store_ttl.py  test_signals.py  test_sma_cost_timing.py  test_strategy_defaults.py  test_worker_failure_handling.py
