[project]
name = "alpha-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis[asyncio]>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
